<resources>
    <string name="app_name">LitterMeUp</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">  Email</string>
    <string name="hint_password"> Password</string>
    <string name="txt_register">Register</string>
    <string name="txt_login">Login</string>
    <string name="app_welcome">Welcome</string>
    <string name="app_welcomeBack">Welcome back</string>
    <string name="app_sub_welcome">Let\'s start by creating a profile</string>
    <string name="app_sub_welcomeBack">Continue saving the world</string>
    <string name="app_question_register">Don\'t have an account?</string>
    <string name="app_question_login">Already have an account?</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="subTitle_home_username">Hi username</string>
    <string name="subTitle_home">Welcome back</string>
    <string name="title_littercash">LitterCash</string>
    <string name="placeholder_pointsToCash">€ LitterMoney</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_category">Category</string>
    <string name="placeholder_pointsGained">X points</string>
    <string name="subTitle_history">History</string>
    <string name="placeholder_contributions">X contribution(s)</string>
    <string name="placeholder_contributionsInDays">X day(s)</string>
    <string name="placeholder_contributionInHours">X hour(s)</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="subTitle_dashboard">See where you can help</string>
    <string name="subTitle_camera">Start reporting trash on the street</string>
    <string name="subTitle_openCamera">Open camera</string>
    <string name="small_trash">Small trash</string>
    <string name="big_trash">Big trash</string>
    <string name="subTitle_feed" translatable="false">Feed</string>
    <string name="title_maps" translatable="false">Maps</string>
    <string name="subTitle_maps">Save the world, start local</string>
    <string name="title_profile">Profile</string>
    <string name="subTitle_profile">Basic settings</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_points">LitterPoints</string>
    <string name="placeholder_level">Level</string>
    <string name="subTitle_friends">Friends</string>
    <string name="subTitle_friends_more">more friends</string>
    <string name="subTitle_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="subTitle_settings">Advanced settings</string>
    <string name="subTitle_preferences">Preferences</string>
    <string name="title_languages">Languages</string>
    <string name="placeholder_language">Language</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_nightmode">Dark mode</string>
    <string name="subTitle_app">App</string>
    <string name="title_feedback">Give feedback about the app</string>
    <string name="title_terms">Terms and conditions</string>
    <string name="title_privacy">Privacy</string>
    <string name="btn_logout">Logout</string>
    <string name="title_terms_conditions">Terms and conditions</string>
    <string name="terms_part1">These terms and conditions (“Agreement”) set forth the general terms and conditions of your use of the “LitterMeUp” mobile application (“Mobile Application” or “Service”) and any of its related products and services (collectively, “Services”). This Agreement is legally binding between you (“User”, “you” or “your”) and this Mobile Application developer (“Operator”, “we”, “us” or “our”). If you are entering into this agreement on behalf of a business or other legal entity, you represent that you have the authority to bind such entity to this agreement, in which case the terms “User”, “you” or “your” shall refer to such entity. If you do not have such authority, or if you do not agree with the terms of this agreement, you must not accept this agreement and may not access and use the Mobile Application and Services. By accessing and using the Mobile Application and Services, you acknowledge that you have read, understood, and agree to be bound by the terms of this Agreement. You acknowledge that this Agreement is a contract between you and the Operator, even though it is electronic and is not physically signed by you, and it governs your use of the Mobile Application and Services.</string>
    <string name="terms_part2_title">Accounts and membership</string>
    <string name="terms_part2">If you create an account in the Mobile Application, you are responsible for maintaining the security of your account and you are fully responsible for all activities that occur under the account and any other actions taken in connection with it. We may, but have no obligation to, monitor and review new accounts before you may sign in and start using the Services. Providing false contact information of any kind may result in the termination of your account. You must immediately notify us of any unauthorized uses of your account or any other breaches of security. We will not be liable for any acts or omissions by you, including any damages of any kind incurred as a result of such acts or omissions. We may suspend, disable, or delete your account (or any part thereof) if we determine that you have violated any provision of this Agreement or that your conduct or content would tend to damage our reputation and goodwill. If we delete your account for the foregoing reasons, you may not re-register for our Services. We may block your email address and Internet protocol address to prevent further </string>
    <string name="terms_part3_title">User content</string>
    <string name="terms_part3">We do not own any data, information or material (collectively, “Content”) that you submit in the Mobile Application in the course of using the Service. You shall have sole responsibility for the accuracy, quality, integrity, legality, reliability, appropriateness, and intellectual property ownership or right to use of all submitted Content. We may, but have no obligation to, monitor and review the Content in the Mobile Application submitted or created using our Services by you. You grant us permission to access, copy, distribute, store, transmit, reformat, display and perform the Content of your user account solely as required for the purpose of providing the Services to you. Without limiting any of those representations or warranties, we have the right, though not the obligation, to, in our own sole discretion, refuse or remove any Content that, in our reasonable opinion, violates any of our policies or is in any way harmful or objectionable. Unless specifically permitted by you, your use of the Mobile Application and Services does not grant us the license to use, reproduce, adapt, modify, publish or distribute the Content created by you or stored in your user account for commercial, marketing or any similar purpose.</string>
    <string name="terms_part4_title">Backups</string>
    <string name="terms_part4">We are not responsible for the Content residing in the Mobile Application. In no event shall we be held liable for any loss of any Content. It is your sole responsibility to maintain appropriate backup of your Content. Notwithstanding the foregoing, on some occasions and in certain circumstances, with absolutely no obligation, we may be able to restore some or all of your data that has been deleted as of a certain date and time when we may have backed up data for our own purposes. We make no guarantee that the data you need will be available.</string>
    <string name="terms_part5_title">Links to other resources</string>
    <string name="terms_part5">Although the Mobile Application and Services may link to other resources (such as websites, mobile applications, etc.), we are not, directly or indirectly, implying any approval, association, sponsorship, endorsement, or affiliation with any linked resource, unless specifically stated herein. We are not responsible for examining or evaluating, and we do not warrant the offerings of, any businesses or individuals or the content of their resources. We do not assume any responsibility or liability for the actions, products, services, and content of any other third parties. You should carefully review the legal statements and other conditions of use of any resource which you access through a link in the Mobile Application. Your linking to any other off-site resources is at your own risk.</string>
    <string name="terms_part6_title">Prohibited uses</string>
    <string name="terms_part6">In addition to other terms as set forth in the Agreement, you are prohibited from using the Mobile Application and Services or Content: (a) for any unlawful purpose; (b) to solicit others to perform or participate in any unlawful acts; © to violate any international, federal, provincial or state regulations, rules, laws, or local ordinances; (d) to infringe upon or violate our intellectual property rights or the intellectual property rights of others; (e) to harass, abuse, insult, harm, defame, slander, disparage, intimidate, or discriminate based on gender, sexual orientation, religion, ethnicity, race, age, national origin, or disability; (f) to submit false or misleading information; (g) to upload or transmit viruses or any other type of malicious code that will or may be used in any way that will affect the functionality or operation of the Mobile Application and Services, third party products and services, or the Internet; (h) to spam, phish, pharm, pretext, spider, crawl, or scrape; (i) for any obscene or immoral purpose; or (j) to interfere with or circumvent the security features of the Mobile Application and Services, third party products and services, or the Internet. We reserve the right to terminate your use of the Mobile Application and Services for violating any of the prohibited uses.</string>
    <string name="terms_part7_title">Intellectual property rights</string>
    <string name="terms_part7">“Intellectual Property Rights” means all present and future rights conferred by statute, common law or equity in or in relation to any copyright and related rights, trademarks, designs, patents, inventions, goodwill and the right to sue for passing off, rights to inventions, rights to use, and all other intellectual property rights, in each case whether registered or unregistered and including all applications and rights to apply for and be granted, rights to claim priority from, such rights and all similar or equivalent rights or forms of protection and any other results of intellectual activity which subsist or will subsist now or in the future in any part of the world. This Agreement does not transfer to you any intellectual property owned by the Operator or third parties, and all rights, titles, and interests in and to such property will remain (as between the parties) solely with the Operator. All trademarks, service marks, graphics and logos used in connection with the Mobile Application and Services, are trademarks or registered trademarks of the Operator or its licensors. Other trademarks, service marks, graphics and logos used in connection with the Mobile Application and Services may be the trademarks of other third parties. Your use of the Mobile Application and Services grants you no right or license to reproduce or otherwise use any of the Operator or third party trademarks.</string>
    <string name="terms_part8_title">Limitation of liability</string>
</resources>