<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="be.ehb.trends_littermeup.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_maps"
            app:destination="@id/navigation_maps" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="be.ehb.trends_littermeup.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_navigation_maps_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_maps_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_maps_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="be.ehb.trends_littermeup.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_maps"
            app:destination="@id/navigation_maps" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_dashboard_to_newPostFragment"
            app:destination="@id/newPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="be.ehb.trends_littermeup.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_maps"
            app:destination="@id/navigation_maps" />
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="be.ehb.trends_littermeup.ui.feed.NewPostFragment"
        android:label="fragment_newpost"
        tools:layout="@layout/fragment_newpost" />

</navigation>