<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray"
    tools:context=".MainActivity">

    <!-- App logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="@id/img_helper_2"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <!-- Guidline helpers for the app logo -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/img_helper_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <!-- This linearlayout is used for the white shape in de design -->
    <LinearLayout
        android:id="@+id/app_shape_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/app_shape_1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_3">
    </LinearLayout>

    <TextView
        android:id="@+id/app_welcome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_welcome"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_3"
        app:layout_constraintWidth_percent="0.7" />
    <TextView
        android:id="@+id/app_sub_welcome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/app_sub_welcome"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_4"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_5"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_6"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_7"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="@color/black"
        app:backgroundTint="@color/main_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_8"
        app:layout_constraintWidth_percent="0.4"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/app_register_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_question_login"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/img_helper_1"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_9"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/app_redirect_to_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/img_helper_2"
        app:layout_constraintTop_toBottomOf="@+id/img_helper_9"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>